# AdaDoom3

./: .gitattributes  .gitcommands.txt  .gitignore  AUTHORS.md  CHANGES.md  COPYING.md  Main.adb  Makefile  Neo-Foundation-Build_Options.ads  Neo-Foundation-Data_Types.adb  Neo-Foundation-Data_Types.ads  Neo-Foundation-Generic_Protected.ads  Neo-Foundation-Package_Testing.adb  Neo-Foundation-Package_Testing.ads  Neo-Foundation-Text_IO.adb  Neo-Foundation-Text_IO.ads  Neo-Foundation.ads  Neo-Library-Plucker_Coordinates.ads  Neo-Library-Vectors.ads  Neo-System-Exception_Handling.ads  Neo-System-Input.adb  Neo-System-Input.ads  Neo-System-Memory.adb  Neo-System-Memory.ads  Neo-System-Network.ads  Neo-System-OpenGL.ads  Neo-System-Processor.adb  Neo-System-Processor.ads  Neo-System-Text.adb  Neo-System-Text.ads  Neo-System-Window.adb  Neo-System-Window.ads  Neo-System.adb  Neo-System.ads  Neo.ads  README.md  adadoom3.gpr  alpha_test.7z  build.bat  build.sh  (+31 more)
Libraries/GTK/: .gitignore  ANNOUNCE  AUTHORS  INSTALL  Makefile.in  README.md  aclocal.m4  configure  configure.in  features  gtkada.gpr  known-problems  shared.gpr
Libraries/GTK/contrib/: README  atk-2.4.0-win32.diff  cairo-1.10.2-solaris.diff  cairo-1.10.2-win32.diff  contrib.gpr  gdk-pixbuf-2.22.1-solaris.diff  gdk-pixbuf-2.22.1.diff  gdk-pixbuf-2.26.1-solaris.diff  gdk-pixbuf-2.26.1-win32.diff  gdk-pixbuf-2.26.1.diff  gettext-0.18.1.1-darwin.diff  glade-3.10.2-win32.diff  glade-3.10.2.diff  glade3-3.8.1.diff  glib-2.28.8-darwin.diff  glib-2.28.8-win32.diff  glib-2.28.8.diff  glib-2.32.1-solaris.diff  glib-2.32.1-win32.diff  glib-2.32.1.diff  gnome-themes-standard-3.4.2.diff  gobject-introspection-1.32.1-win32.diff  gtk+-2.24.8-darwin.diff  gtk+-2.24.8-solaris.diff  gtk+-2.24.8-win32.diff  gtk+-2.24.8.diff  gtk+-3.4.1-solaris.diff  gtk+-3.4.1-win32.diff  gtk+-3.4.1.diff  gtkada-2.10-win32.diff  hicolor-icon-theme-0.12-win32.diff  libffi-3.0.10-darwin.diff  libffi-3.0.10-solaris.diff  pango-1.28.4-win32.diff  pango-1.28.4.diff  pango-1.30.0-darwin.diff  pango-1.30.0-win32.diff  pixman-0.24.0-solaris.diff  pixman-0.24.0-win32.diff  pixman-0.24.0.diff  (+1 more)
Libraries/GTK/docs/: Makefile.in  generate_docs.gpr  gtkada-config.1  texi2html
Libraries/GTK/docs/gtkada_rm/: .cvsignore  Makefile.in  checkbutton.eps  docgen_gtkada.py  font.eps  generate_doc.pl  generate_docs.gpr  generate_html_doc.pl  gtkada.css  gtkada_rm.css  gtkada_rm.js  gtkada_rm.texi  texinfo.tex  togglebutton.eps
Libraries/GTK/docs/gtkada_ug/: Makefile  applications.rst  bibliography.rst  boxes.fig  conf.py  debugging.rst  external_events.rst  getting_started.rst  glade.rst  hierarchical_composition.rst  index.rst  intro.rst  memory.rst  new_widgets.rst  object_oriented.rst  reporting_bugs.rst  resource_files.rst  signals.rst  tasking.rst
Libraries/GTK/examples/: Makefile  README
Libraries/GTK/examples/base_widget/: Makefile  README  default.gpr  main.adb  my_widget.adb  my_widget.ads
Libraries/GTK/examples/calendar_combo/: Makefile  README  calendar_combo.adb  calendar_combo.ads  main.adb
Libraries/GTK/examples/composite_widget/: Makefile  README  main.adb  my_dialog.adb  my_dialog.ads
Libraries/GTK/examples/cursors/: Makefile  README  cursor.adb  cursor.gpr
Libraries/GTK/examples/display_switch/: Makefile  display_switch.gpr  test_display_switch.adb
Libraries/GTK/examples/documentation/: Makefile  README  banner.adb  clist.adb  clist.ads  contextual.adb  default.gpr  draw.adb  glist_traverse.adb  toggle.adb  tooltips.adb
Libraries/GTK/examples/doublebuffer/: Makefile  README  anim.adb  anim2.adb  anim_task.adb  anim_task.ads  anim_timeout.adb  anim_timeout.ads  double_buffer.adb  double_buffer.ads  full_test.adb  full_test.ads  parameters.adb
Libraries/GTK/examples/dynamic_cast/: Makefile  README  dynamic.adb
Libraries/GTK/examples/gtk_examples/: Makefile  README  scribble.adb
Libraries/GTK/examples/handlers/: Makefile  README  delete_event.adb  general_tips.adb  own_marshaller.adb  own_marshaller.ads  specific_tips.adb
Libraries/GTK/examples/images/: Makefile  (+4 more)
Libraries/GTK/po/: .cvsignore  Makefile.in  README  build_skeleton.pl
Libraries/GTK/projects/: .cvsignore  Makefile  generate_prj.sh  gtkada.pc.in  gtkada_glade.lgpr  gtkada_gnome.lgpr  gtkada_install_dynamic.gpr.in  gtkada_install_dynamic_gl.gpr.in  gtkada_install_static.gpr  gtkada_install_static_gl.gpr
Libraries/GTK/src/: .cvsignore  Makefile.common.in  Makefile.in  cairo-font_face.ads  cairo-font_options.ads  cairo-image_surface.adb  cairo-image_surface.ads  cairo-matrix.ads  cairo-pattern.ads  cairo-pdf.adb  cairo-pdf.ads  cairo-png.adb  cairo-png.ads  cairo-region.adb  cairo-region.ads  cairo-scaled_font.ads  cairo-surface.ads  cairo-svg.adb  cairo-svg.ads  cairo.adb  cairo.ads  check_all  config.h.in  gdk-bitmap.adb  gdk-bitmap.ads  gdk-cairo.adb  gdk-cairo.ads  gdk-color.adb  gdk-color.ads  gdk-cursor.adb  gdk-cursor.ads  gdk-display.adb  gdk-display.ads  gdk-display_manager.adb  gdk-display_manager.ads  gdk-dnd.adb  gdk-dnd.ads  gdk-drawable.adb  gdk-drawable.ads  gdk-event.adb  (+428 more)
Libraries/GTK/testgtk/: .cvsignore  Makefile.in  README  central.xml  common.adb  common.ads  create_about.adb  create_about.ads  create_alignment.adb  create_alignment.ads  create_arrow.adb  create_arrow.ads  create_assistant.adb  create_assistant.ads  create_box.adb  create_box.ads  create_builder.adb  create_builder.ads  create_button_box.adb  create_button_box.ads  create_buttons.adb  create_buttons.ads  create_calendar.adb  create_calendar.ads  create_canvas.adb  create_canvas.ads  create_cell_view.adb  create_cell_view.ads  create_check_buttons.adb  create_check_buttons.ads  create_clipboard.adb  create_clipboard.ads  create_clist.adb  create_clist.ads  create_color_selection.adb  create_color_selection.ads  create_combo_box.adb  create_combo_box.ads  create_ctree.adb  create_ctree.ads  (+131 more)
Libraries/GTK/xml/: Makefile  gtkada.xml
Libraries/SDL/: CMakeLists.txt
Libraries/SDL/cmake/: CheckObjCSourceCompiles.cmake  FindPulseAudio.cmake
Libraries/SDL/include/: SDL_config.h  SDL_config.h.cmake
(+9922 files in other folders)
